--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,6 @@ spring:
     url: jdbc:mysql://localhost:3306/big_event?useSSL=false
     username: root
     password: 1470963
+
+server:
+  port: 80
